Fixed Weapon list table size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -62,4 +62,5 @@ header {
     margin-top: 20px;
     border-radius: 5px;
     opacity: 0.9;
+    box-shadow: 0px -1px 0px 0px rgba(0,0,0,0.1) inset, 1px 0px 0px 0px rgba(0,0,0,0.1) inset, -1px 0px 0px 0px rgba(0,0,0,0.1);
 }
